--- a/_config.yml
+++ b/_config.yml
@@ -2,22 +2,22 @@
 title: 'your awesome title'
 description: 'your web description'
 keywords: 'your web keywords, another keywords'
-url: 'https://abc.github.io' # your host
+url: 'https://eduardo2s.github.io' # your host
 
 # nav 中文字符空格：&emsp;
 nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
-  首页: '/'
-  标签: '/tags.html'
-  时间线: '/timeline.html'
-  关于博主: '/about.html'
-  友情链接: '/friendLink.html'
+  Inicio: '/'
+  Tags: '/tags.html'
+  Timeline: '/timeline.html'
+  Sobre: '/about.html'
+#  友情链接: '/friendLink.html'
 
 # 博主
 author: true
-name: 'your awesome name'
-NickName: 'your awesome nickname'
-webtitle: 'your awesome webtitle'
-bio: 'your awesome bio'
+name: 'Eduardo'
+NickName: ''
+webtitle: ''
+bio: 'Bio em progresso'
 about: true
 aboutyou: 'your introduction'
 portraits: '/assets/profile.jpeg' # your portraits image file path
@@ -63,7 +63,7 @@ friends:
 
 # 评论 最佳体验 在disqus、livere和Gitment之间三选一
 # disqus 评论
-disqus: false
+disqus: true
 disqus_url: '' # https://abc.disqus.com/embed.js
 # 来必力评论
 livere: true
@@ -80,7 +80,7 @@ social-share: true
 social-share-items: ['qq', 'wechat', 'weibo', 'twitter', 'facebook']
 
 # 百度统计 在baidu-url里填写自己相关的url代码
-baidu: true
+baidu: false
 baidu-url: ''
 # 谷歌分析 在google-ID里填写自己在谷歌分析获得的追踪ID
 google: false
