--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ about-author: I am a researcher and data analyst. Always hungry to keep learning
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: # add your Github handle
-social-linkedin: # add your Linkedin handle
+social-linkedin: https://www.linkedin.com/in/eduardosilva5/ # add your Linkedin handle
 social-email: # add your Email address
 
 # Disqus
