--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hello, world! I'm David Freeman
+title: Baitas Ideiais
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -15,7 +15,7 @@ about-author: I am a researcher and data analyst. Always hungry to keep learning
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: # add your Github handle
-social-linkedin: https://www.linkedin.com/in/eduardosilva5/ # add your Linkedin handle
+social-linkedin: eduardosilva5/ # add your Linkedin handle
 social-email: # add your Email address
 
 # Disqus
