--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ social-linkedin: eduardosilva5/ # add your Linkedin handle
 social-email: # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: disqus_nEXpKRATaU # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
